chore: Update HTTP dependency to version 1.10.8

--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "CatanAI"
 uuid = "c862ab02-7953-4004-86b5-a7e3292f1156"
 authors = ["Selim Bucher"]
 version = "0.1.0"
+
+[deps]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
